# rag-evals-starter

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Notebook/: data_notebook.ipynb  rag_dataset_train.csv
data/: rag_dataset_test.csv  sample_input.json
demo/: demo_app.py
src/: pipeline.py
src/adk/agents/dataextractor/: rag_context_uploader.py
src/adk/agents/rag/: __init__.py  agent.py
src/adk/agents/rag/prompt/: rag_agent.py
src/rag_evals_starter/core/: __init__.py  utills.py
src/rag_evals_starter/data_processing/: HF-data-processing.py  data_ingestion.py
src/rag_evals_starter/pipelines/: pgvectorrag.py
tests/: test_pipeline.py
